--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
     "@react-spring/parallax": "^9.7.3",
     "@react-spring/web": "^9.7.3",
     "@types/node": "20.4.2",
@@ -33,6 +34,7 @@
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-geocode": "^0.2.3",
     "react-scroll": "^1.8.9",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.3",
@@ -40,6 +42,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/react-geocode": "^0.2.1",
     "@types/react-scroll": "^1.8.7",
     "daisyui": "^3.2.1"
   }
