--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-geocode": "^0.2.3",
     "react-scroll": "^1.8.9",
+    "react-tilt": "^1.0.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
