--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,6 @@
 name = "fastapi"
 compatibility_date = "2024-04-02"
+compatibility_flags = ["nodejs_compat"]
 
 [vars]
 NEXT_PUBLIC_GEOCODING_KEY = "AIzaSyDMGS1XHnEYvmfH0rOeYsaJ4HmV7EXpX-0"
