--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@flydotio/dockerfile": "latest",
     "@types/react-geocode": "^0.2.1",
     "@types/react-scroll": "^1.8.7",
+    "@types/tailwindcss": "^3.1.0",
     "daisyui": "^3.2.1"
   }
 }
