--- a/package.json
+++ b/package.json
@@ -9,50 +9,53 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.2.0",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.4",
-    "@react-spring/parallax": "^9.7.3",
-    "@react-spring/web": "^9.7.3",
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
-    "@vercel/analytics": "^1.1.1",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "class-variance-authority": "^0.6.1",
-    "clsx": "^1.2.1",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
-    "framer-motion": "^10.13.1",
-    "lucide-react": "^0.260.0",
-    "next": "13.4.10",
-    "next-themes": "^0.2.1",
-    "postcss": "8.4.26",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-geocode": "^0.2.3",
-    "react-hook-form": "^7.45.4",
-    "react-scroll": "^1.8.9",
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@react-spring/parallax": "^10.0.1",
+    "@react-spring/web": "^10.0.1",
+    "@types/node": "24.2.0",
+    "@types/react": "19.1.9",
+    "@types/react-dom": "19.1.7",
+    "@vercel/analytics": "^1.5.0",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "eslint": "9.32.0",
+    "eslint-config-next": "15.4.6",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.537.0",
+    "next": "15.4.6",
+    "next-themes": "^0.4.6",
+    "postcss": "^8.5.6",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "react-geocode": "^2.0.1",
+    "react-hook-form": "^7.62.0",
+    "react-scroll": "^1.9.3",
     "react-tilt": "^1.0.2",
-    "tailwind-merge": "^1.13.2",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6",
-    "typewriter-effect": "^2.20.1",
-    "zod": "^3.21.4",
-    "zustand": "^4.3.9"
+    "sharp": "^0.34.3",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animated": "^2.0.0",
+    "typescript": "5.9.2",
+    "typewriter-effect": "^2.22.0",
+    "zod": "^4.0.15",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "latest",
-    "@types/react-geocode": "^0.2.1",
-    "@types/react-scroll": "^1.8.7",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/react-geocode": "^0.2.4",
+    "@types/react-scroll": "^1.8.10",
     "@types/tailwindcss": "^3.1.0",
-    "daisyui": "^3.2.1"
+    "daisyui": "^5.0.50"
   }
 }
